devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sotayocoop
  labels:
    app.kubernetes.io/name: sotayocoop
