devops/k8s/postgres-postgis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-postgis
  namespace: sotayocoop
  labels:
    app: postgres-postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-postgis
  template:
    metadata:
      labels:
        app: postgres-postgis
    spec:
      containers:
        - name: postgres
          image: postgis/postgis:15-3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: sotayocoop
spec:
  ports:
    - port: 5432
      targetPort: dbport
  selector:
    app: postgres-postgis
  type: ClusterIP
